Update sass to fix #18
- Fix for YouTube shortcode not showing video
- Give div within content height and width of 100%
- May affect user-input divs in content

--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -24,6 +24,10 @@
     margin: 2rem 0
     line-height: 2em
     letter-spacing: 2px
+    div
+        width: 100%
+        height: 100%
+        margin-bottom: 1em
     & h1,h2,h3
         margin: 1em 0em
         text-align: left
